# cookiecutter-cpp-networking-tcp

./: cookiecutter.json
{{cookiecutter.project_name}}/: .clang-format  .gitignore  CMakeLists.txt  compile.sh  vcpkg-packages.txt
{{cookiecutter.project_name}}/src/main/resources/: local.properties
{{cookiecutter.project_name}}/src/main/{{cookiecutter.project_slug}}/: config.cpp  config.h  logging.h  main.cpp  server.cpp  server.h  session.cpp  session.h
